<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FF9800"
    tools:context=".fragments.EvaluacionFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:text="@string/question"
        android:id="@+id/label_question" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:id="@+id/text_question"
        android:textSize="18sp"
        android:textColor="?android:attr/textColorPrimary"
        android:layout_marginTop="8dp"
         />

    <View
        android:id="@+id/ruler"

        android:layout_marginTop="10dp"
        android:background="#813e3e3e"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/answer_group">

        <RadioButton
            android:text="RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer1"
            android:layout_weight="1" />

        <RadioButton
            android:text="RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer2"
            android:layout_weight="1" />

        <RadioButton
            android:text="RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer3"
            android:layout_weight="1" />

        <RadioButton
            android:text="RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer4"
            android:layout_weight="1" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        >


        <Button
            android:text="@string/prev"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"

            android:layout_height="wrap_content"
            android:id="@+id/btn_prev" />
        <Button
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/btn_check" />


    </LinearLayout>


</LinearLayout>