<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
android:background="@drawable/gradient5"
    tools:context=".fragments.LoginFragment">

    <ImageView
        android:layout_width="217dp"
        android:layout_height="161dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/logomn"></ImageView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/edit1"
                android:layout_width="300dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="Ingrese su Email"
                android:textColorHint="#FFFFFF">
            </EditText>
            <EditText
                android:id="@+id/edit2"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textColorHint="#FFFFFF"
                android:hint="Ingrese su contraseña"
                android:inputType="textPassword"
                >
            </EditText>
            <Button
                android:id="@+id/button2"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:background="@drawable/ovalo"
                android:textColor="@color/aqua"
                android:text="@string/iniciar"

                android:layout_marginTop="10dp"
                >
            </Button>

            <Button
                android:id="@+id/button1"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:background="@drawable/ovalo"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/aqua"
                android:text="@string/registrar" />

            <Button
                android:id="@+id/btnInvitado"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginTop="10dp"
                android:textColor="#FFFEFF"
                android:text="@string/invitado"
                />
            <com.google.android.gms.common.SignInButton
                android:id="@+id/btnGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                >
            </com.google.android.gms.common.SignInButton>


        </LinearLayout>




    </ScrollView>

</LinearLayout>